Add db tables and migrations

--- a/LeaveManagement.Web/appsettings.json
+++ b/LeaveManagement.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LeaveManagement.Web-edbcb9eb-65fb-412c-8e10-7593f1461b76;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LeaveManagementNet8;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
